# laba19

./: CMakeLists.txt  main.c
task/: convertFloat.h  evaluateExpression.h  filterWord.h  getBestTeam.h  leaveLongestWord.h  matrixTransposition.h  rearrangeNumbers.h  removeTruePolynomial.h  transposeNonSymmetricMatrix.h  updateProduct.h
